the goat has awaken

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>I am the king of cream</h1>
 
-    <h3>forget me not</h3>
+    <h3>Thou cannot Forgeth me</h3>
     
 </body>
 </html>
