--- a/index.html
+++ b/index.html
@@ -39,26 +39,5 @@
     </div>
     
 </header>
-<body bgcolor="#222222">
-    <form>
- <input type="button" onclick="myFunction()"><br>
-    <input id = "searchbar" type="text" placeholder="Song"><br>
-    <button>
-        <div class="dropdown-menu">
-            <button  onclick="sortPlease()"
-            class ="dropbtn">Sorting options</button>
-            <div id="dropDown" class="inside-dropdown">
-                <a href="A-Z">link it michael</a>
-                <a href="Newest/Oldest added">link michael</a>
-                <a href="By search"> link michael</a>
-            </div>
-        </div>
-
-
-        <button id = "playlistSelection" onclick = "authenticate().then(loadClient).then(playlistToSelect)" >Select playlist</button>
-
-<div id="pictureCont"></div>
-<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-        <ul id = "playlistDisplay"></ul>
-</body>
+<body></body> 
 </html>
