--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <body bgcolor="#222222">
 
-    <button id="playlistSelection" onclick="authenticate().then(loadClient).then(playlistToSelect)">Select
+    <button class="buttons" onclick="authenticate().then(loadClient).then(playlistToSelect)">Select
         playlist</button>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <div id="pictureCont"></div>
