liked songs option

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <div id="pictureCont"></div>
     <input id="searchbar" onkeyup="searchSong()" type="text" name="search" placeholder="Search a song">
+    <button class = "buttons" onclick = "executeLike()" id = "like_button" display = "none">Liked songs playlist</button>
     <ul id="playlistDisplay"></ul>
 </body>
 
