Show more songs button

--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@
         playlist</button>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <div id="pictureCont"></div>
+    <button class = "buttons" onclick = "executeLike()" id = "like_button">Liked songs playlist</button>
     <input id="searchbar" onkeyup="searchSong()" type="text" name="search" placeholder="Search a song">
-    <button class = "buttons" onclick = "executeLike()" id = "like_button" display = "none">Liked songs playlist</button>
+    <button class = "buttons" onclick = "showMoreSongs()">Show more songs</button>
+    
     <ul id="playlistDisplay"></ul>
 </body>
 
