--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <button class = "buttons" onclick = "executeLike()" id = "like_button">Liked songs playlist</button>
     <input id="searchbar" onkeyup="searchSong()" type="text" name="search" placeholder="Search a song">
     <ul id="playlistDisplay"></ul>
-    <button class = "buttons" onclick = "showMoreSongs()">Show more songs</button>
+    <button class = "buttons" onclick = "showMoreSongs()" id = "moreSongsButton">Show more songs</button>
 </body>
 
 </html>
