--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         playlist</button>
     <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
     <div id="pictureCont"></div>
-    <button class = "buttons" onclick = "executeLike()" id = "like_button">Liked songs playlist</button>
+    <button class = "buttons" id = "like_button">Liked songs playlist</button>
     <input id="searchbar" onkeyup="searchSong()" type="text" name="search" placeholder="Search a song">
     <ul id="playlistDisplay"></ul>
     <button class = "buttons" onclick = "showMoreSongs()" id = "moreSongsButton">Show more songs</button>
